<resources>
    <string name="app_name">Dibapp</string>
    <string name="Sign_Up">Sign-Up</string>
    <string name="Login">Login</string>
    <string name="dibApp" translatable="false">dibApp</string>
    <string name="Lost">Lost Password?</string>
    <string name="Name">Complete Name</string>
    <string name="RegNum">Registration Number</string>
    <string name="TeacherReg">I\'m a teacher</string>
    <string name="SendPass">Send Password</string>
    <string name="EditProfile">Edit Profile</string>
    <string name="ChangeName">Insert Name</string>
    <string name="ChangeRegNum">Insert Registration Number</string>
    <string name="SaveChange">Save</string>
    <string name="ChangePass">Change Password</string>
    <string name="OldPwd">Old Password</string>
    <string name="NewPwd">New Password</string>
    <string name="title_activity_student_profile" translatable="false">StudentProfileActivity</string>
    <string name="tab_text_1" translatable="false">Tab 1</string>
    <string name="tab_text_2" translatable="false">Tab 2</string>
    <string name="MyCourses">My Courses</string>
    <string name="AllCourses">All Courses</string>
    <string name="Create_Lesson">Create Lesson</string>
    <string name="Description">Description</string>
    <string name="Classroom">Classroom</string>
    <string name="Date">Date</string>
    <string name="Start_time">Start time</string>
    <string name="End_time">End time</string>
    <string name="Save_lesson">Save Lesson</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="AddCourse">Add Course</string>
    <string name="CourseName">Course Name</string>
    <string name="CourseDescription">Course Description</string>
    <string name="DegreeCourse">Degree Course</string>
    <string name="CoursePwd">Course Password</string>
    <string name="EnterName">Enter a Name!</string>
    <string name="EnterRegNumber">Enter the Registration Number!</string>
    <string name="EnterEmail">Enter an Email!</string>
    <string name="EnterPwd">The password should be at least 6 characters long!</string>
    <string name="Undefined">Undefined</string>
    <string name="LessonBoard">Lesson Board</string>
    <string name="Edit">Edit</string>
    <string name="Valutations">Valutations</string>
    <string name="title_activity_profile" translatable="false">ProfileActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>

    <string name="home_second" translatable="false">Home Second</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="Logout">Logout</string>
    <string name="Back">Back</string>
    <string name="EnterDescription">Enter Description!</string>
    <string name="EnterDegree">Enter Degree Course!</string>
    <string name="CourseSuccess">Course created successfully!</string>
    <string name="CoursesNotAvailable">There are not available courses.</string>
    <string name="Password" translatable="false">Password</string>
    <string name="LessonsList">Lessons List</string>
    <string name="RegisterCourse">Register</string>
    <string name="EnterKey">Enter Registration Key</string>
    <string name="AllLessons">Lessons</string>
    <string name="LessonKey">Lesson Key</string>
    <string name="LessonSuccess">Lesson Created Successfully!</string>
    <string name="EmptyField">This field cannot be Empty!</string>
    <string name="LessonsNotAvailable">There Are Not Available Lessons.</string>
    <string name="Present">\"Present!\"</string>
    <string name="CommentList">Valutations</string>
    <string name="CommentInsert">Insert Valutation</string>
    <string name="LessonDescription">Lesson Description</string>
    <string name="StartLesson">Start Lesson</string>
    <string name="EndLesson">End Lesson</string>
    <string name="InsertCommentHere">Insert your comment here.</string>
    <string name="PrivateComment">Private Comment</string>
    <string name="EmptyComment">Insert your Comment!</string>
    <string name="CommentPublished">Your comment has been published successfully!</string>
    <string name="PresentT">Present</string>

</resources>
