<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".StudentLessonDataActivity"
android:orientation="vertical"
android:background="@drawable/bg_gradient">


<TextView
    android:id="@+id/pschedadesc"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="30dp"
    android:layout_marginTop="30dp"
    android:text="@string/LessonDescription"
    android:textColor="#FFFFFF"
    android:textStyle="bold"
    android:textSize="30sp"/>





<TextView
    android:id="@+id/pschedadate"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/Date"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="30dp"/>


<TextView
    android:id="@+id/pschedastart"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/Start_time"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="30dp"/>
<TextView
    android:id="@+id/pschedaend"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/End_time"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="30dp"/>

<EditText
    android:id="@+id/pschedachiave"
    android:layout_width="300dp"
    android:layout_height="37dp"
    android:ems="10"
    android:inputType="textPersonName"
    android:hint="@string/LessonKey"
    android:layout_marginTop="50dp"
    android:background="@drawable/rounded_textbox"
    android:layout_gravity="center_horizontal"
    android:paddingLeft="10dp"/>


<Button
    android:id="@+id/lessonlistbutton"
    android:layout_width="218dp"
    android:layout_height="37dp"
    android:background="@drawable/rounded_button"
    android:layout_gravity="center_horizontal"
    android:text="@string/Present"
    android:layout_marginTop="30dp"/>

<Button
    android:id="@+id/commentlistbutton"
    android:layout_width="218dp"
    android:layout_height="37dp"
    android:background="@drawable/rounded_button"
    android:layout_gravity="center_horizontal"
    android:text="@string/CommentList"
    android:layout_marginTop="30dp"
    />

    <Button
        android:id="@+id/commentinsertbutton"
        android:layout_width="218dp"
        android:layout_height="37dp"
        android:background="@drawable/rounded_button"
        android:layout_gravity="center_horizontal"
        android:text="@string/CommentInsert"
        android:layout_marginTop="30dp"
        />

<Button
    android:id="@+id/backbutton"
    android:layout_width="218dp"
    android:layout_height="37dp"
    android:background="@drawable/rounded_button"
    android:layout_gravity="center_horizontal"
    android:text="@string/Back"
    android:layout_marginTop="30dp"/>



</LinearLayout>