<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentCourseDataActivity"
    android:orientation="vertical"
    android:background="@drawable/bg_gradient">


    <TextView
        android:id="@+id/pschedanome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/CourseName"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/pschedaprof"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/teacher"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"/>


    <TextView
        android:id="@+id/pschedadesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Description"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/pschedalaurea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DegreeCourse"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/keyreg"
        android:background="@drawable/rounded_textbox"
        android:paddingLeft="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="300dp"
        android:layout_height="37dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="50dp"
        android:hint="@string/EnterKey" />


    <Button
        android:id="@+id/iscrivitibutton"
        android:layout_width="218dp"
        android:layout_height="37dp"
        android:background="@drawable/rounded_button"
        android:layout_gravity="center_horizontal"
        android:text="@string/RegisterCourse"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/backbutton"
        android:layout_width="218dp"
        android:layout_height="37dp"
        android:background="@drawable/rounded_button"
        android:layout_gravity="center_horizontal"
        android:text="@string/Back"
        android:layout_marginTop="30dp"/>




</LinearLayout>