<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModProfileActivity"
    android:orientation="vertical"
    android:background="@drawable/bg_gradient">

    <TextView
        android:id="@+id/editprofiletext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/EditProfile"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/changenametext"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/ChangeName"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="300dp"
        android:layout_height="37dp"
        android:background="@drawable/rounded_textbox"
        android:paddingLeft="10dp"
        />

    <EditText
        android:id="@+id/changeregnumbertext"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/ChangeRegNum"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="300dp"
        android:layout_height="37dp"
        android:background="@drawable/rounded_textbox"
        android:paddingLeft="10dp" />

    <Button
        android:id="@+id/saveeditsbutton"
        android:text="@string/SaveChange"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="218dp"
        android:layout_height="37dp"
        android:background="@drawable/rounded_button"
        android:paddingLeft="10dp" />

    <TextView
        android:id="@+id/changepasswordtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/ChangePass"
        android:textColor="@color/cardview_light_background"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/oldpwdtext"
        android:ems="10"
        android:hint="@string/OldPwd"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="300dp"
        android:layout_height="37dp"
        android:background="@drawable/rounded_textbox"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/newpwdtext"
        android:ems="10"
        android:hint="@string/NewPwd"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="300dp"
        android:layout_height="37dp"
        android:background="@drawable/rounded_textbox"
        android:paddingLeft="10dp" />

    <Button
        android:id="@+id/changepasswordbutton"
        android:text="@string/SaveChange"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="218dp"
        android:layout_height="37dp"
        android:background="@drawable/rounded_button"
        android:paddingLeft="10dp" />

</LinearLayout>