<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateLesson"
    android:orientation="vertical"
    android:background="@drawable/bg_gradient">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/Create_Lesson"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        android:textStyle="bold"/>

    <EditText

        android:id="@+id/text_lesson_desc"
        android:layout_width="300dp"
        android:layout_height="37dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="28dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/rounded_textbox"
        android:paddingLeft="10dp"
        android:hint="@string/Description"
        android:inputType="text"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        />



    <EditText
        android:id="@+id/text_lesson_date"
        android:layout_width="300dp"
        android:layout_height="37dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="28dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="28dp"
        android:paddingLeft="10dp"
        android:background="@drawable/rounded_textbox"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/Date"
        android:inputType="none"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <EditText
        android:id="@+id/text_lesson_start"
        android:layout_width="300dp"
        android:layout_height="37dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="28dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="28dp"
        android:paddingLeft="10dp"
        android:background="@drawable/rounded_textbox"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/Start_time"
        android:inputType="none"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <EditText
        android:id="@+id/text_lesson_end"
        android:layout_width="300dp"
        android:layout_height="37dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="28dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="28dp"
        android:paddingLeft="10dp"
        android:background="@drawable/rounded_textbox"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/End_time"
        android:inputType="none"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <EditText
        android:id="@+id/text_lesson_key"
        android:layout_width="300dp"
        android:layout_height="37dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="28dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="28dp"
        android:paddingLeft="10dp"
        android:background="@drawable/rounded_textbox"
        android:hint="@string/LessonKey"
        android:inputType="text"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <Button
        android:id="@+id/btn_lesson_save"
        android:layout_width="218dp"
        android:layout_height="37dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/rounded_button"

        android:textColor="#FFF"
        android:textSize="18sp"
        android:text="@string/Save_lesson" />

    <Button
        android:id="@+id/backbutton"

        android:text="@string/Back"
        android:layout_width="218dp"
        android:layout_height="37dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_button"
        android:textColor="#FFF"
        android:textSize="18sp"
        android:layout_marginTop="30dp"/>
</LinearLayout>